building 3d inr cls baseline

--- a/experiments/classify_siren_configs/main.yaml
+++ b/experiments/classify_siren_configs/main.yaml
@@ -1,10 +1,10 @@
 defaults:
   - nfnet: inv_ff
-  - dset: cifar
+  - dset: shapenet #cifar
   - opt: adam
   - _self_
 
-batch_size: 32
+batch_size: 4 #32
 warmup_steps: 10000
 max_steps: 200000
 output_dir: ${hydra:runtime.output_dir}
