--- a/experiments/classify_siren_configs/dset/shapenet.yaml
+++ b/experiments/classify_siren_configs/dset/shapenet.yaml
@@ -1,4 +1,7 @@
 _target_: experiments.data_utils.SirenDataset
 data_path: ${data_root_dir}/shapenet10_128x2_3000S_SPYROS
 prefix: randinit_smaller
-split_points: [45000, 50000]
+split_points: null # [45000, 50000]
+
+# spygeo
+layer_layout: [3, 128, 128, 1]
